--- a/src/home/index.css
+++ b/src/home/index.css
@@ -5,6 +5,7 @@
     font-family: Arial, Helvetica, sans-serif;
     outline: none;
     user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 body {
