--- a/src/password-generator/generator.css
+++ b/src/password-generator/generator.css
@@ -5,6 +5,7 @@
     font-family: Arial, Helvetica, sans-serif;
     outline: none;
     user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 body {
