--- a/src/home/index.css
+++ b/src/home/index.css
@@ -14,11 +14,6 @@ body {
     background-color: rgb(14, 42, 71);
 }
 
-.svg-img {
-    width: 100%;
-    height: auto;
-}
-
 main {
     width: 100%;
     display: flex;
@@ -27,6 +22,12 @@ main {
     align-items: center;
     text-align: center;
     padding: 1em;
+}
+
+.world-map {
+    max-width: 75em;
+    width: 100%;
+    height: auto;
 }
 
 h1 {
@@ -94,6 +95,11 @@ footer {
     background-color: rgb(28, 83, 142);
     text-align: center;
     font-size: 0.95em;
+}
+
+.wave-design {
+    width: 100%;
+    height: auto;
 }
 
 .footer-text {
